--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-column: 50px 150px;
+  grid-row: 25px 25px 125px 25px;
+  gap: 15px;
 }
 
 .container div {
@@ -21,10 +25,16 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -44,4 +54,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
