--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -8,6 +8,9 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .container div {
